fix navbar z-index position

--- a/src/app/core/navigation/navigation.component.css
+++ b/src/app/core/navigation/navigation.component.css
@@ -22,6 +22,7 @@ mat-toolbar {
   position: fixed;
   background: #f5f5f5;
   opacity: 1;
+  z-index: 999;
 }
 
 #toolbar-placeholder {
